#4676: EXPLO création du module bluetooth dans le code

--- a/explorations/Bluetooth/Explo/ExploBLE.ioc
+++ b/explorations/Bluetooth/Explo/ExploBLE.ioc
@@ -34,6 +34,7 @@ LPUART1.StopBits=UART_STOPBITS_1
 STM32_WPAN.CFG_LP_CONN_ADV_INTERVAL_MAX=2500
 USART1.IPParameters=BaudRate,WordLength,Parity,StopBits,Mode,OverSampling,OneBitSampling,ClockPrescaler,FIFOMode,TXFIFOThreshold,RXFIFOThreshold,AutoBaudRateEnableParam,TxPinLevelInvertParam,RxPinLevelInvertParam,DataInvertParam,SwapParam,OverrunDisableParam,DMADisableonRxErrorParam,MSBFirstParam,VirtualMode-Asynchronous
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+ProjectManager.Example=BLE_p2pServer
 Dma.LPUART1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Mode
 PinOutPanel.RotationAngle=0
@@ -62,7 +63,7 @@ Mcu.ThirdPartyNb=0
 NVIC.LPUART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 RCC.HCLKFreq_Value=32000000
 Mcu.IPNb=13
-STM32_WPAN.LOCAL_NAME=Explo
+STM32_WPAN.LOCAL_NAME=EXPLO
 ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.APB2TimFreq_Value=32000000
 PCC.Ble.PowerLevel=Min
@@ -96,6 +97,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 Mcu.IP12=USART1
 Mcu.IP11=TINY_LPM
+ProjectManager.ExampleSource=MxCubeFw
 STM32_WPAN.BLE_DBG_APP_EN=0
 ProjectManager.FirmwarePackage=STM32Cube FW_WB V1.11.0
 MxDb.Version=DB.6.0.21
@@ -193,6 +195,7 @@ NVIC.IPCC_C1_TX_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 ProjectManager.DeletePrevious=true
 RCC.HCLK2Freq_Value=32000000
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
+boardIOC=true
 Dma.LPUART1_TX.0.SyncSignalID=HAL_DMAMUX1_SYNC_DMAMUX1_CH1_EVT
 LPUART1.IPParameters=BaudRate,WordLength,Parity,StopBits,Mode,OneBitSampling,ClockPrescaler,FIFOMode,TXFIFOThreshold,RXFIFOThreshold,TxPinLevelInvertParam,RxPinLevelInvertParam,DataInvertParam,SwapParam,OverrunDisableParam,DMADisableonRxErrorParam,MSBFirstParam
 STM32_WPAN.CFG_HW_LPUART1_ENABLED=1
@@ -208,7 +211,7 @@ LPUART1.OneBitSampling=UART_ONE_BIT_SAMPLE_DISABLE
 Dma.LPUART1_TX.0.EventEnable=DISABLE
 USART1.TxPinLevelInvertParam=ADVFEATURE_TXINV_DISABLE
 ProjectManager.TargetToolchain=STM32CubeIDE
-STM32_WPAN.LOCAL_NAME_FORMATTED=,'E','x','p','l','o'
+STM32_WPAN.LOCAL_NAME_FORMATTED=,'E','X','P','L','O'
 PA3.GPIO_Mode=GPIO_MODE_AF_PP
 Dma.LPUART1_TX.0.SyncRequestNumber=1
 PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_FM7,GPIO_Mode
@@ -232,7 +235,7 @@ STM32_WPAN.CFG_DEBUG_TRACE_LIGHT=1
 RCC.SMPSCLockSelectionVirtual=RCC_SMPSCLKSOURCE_HSE
 LPUART1.DMADisableonRxErrorParam=UART_ADVFEATURE_DMA_ENABLEONRXERROR
 Dma.USART1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-board=custom
+board=P-NUCLEO-WB55-Nucleo
 VP_SEQUENCER_VS_SEQUENCER.Mode=SEQUENCER_Enabled
 RCC.Cortex2Freq_Value=32000000
 RCC.VCOOutputFreq_Value=128000000
